@@ -11,11 +11,10 @@ use aes::{
     Aes256,
 };
 use ctr::Ctr128BE;
-use scrypt::Params;
 
 use crate::{
     error::Error,
-    format::{self, DerivedKey, Header, Version},
+    format::{self, DerivedKey, Header, Signature},
 };
 
 /// Decryptor for the scrypt encrypted data format.
@@ -24,7 +23,7 @@ pub struct Decryptor {
     header: Header,
     dk: DerivedKey,
     data: Vec<u8>,
-    signature: [u8; 32],
+    signature: Signature,
 }
 
 impl Decryptor {
@@ -43,42 +42,20 @@ impl Decryptor {
     /// - HMAC-SHA-256 signature of the header mismatch.
     pub fn new(password: impl AsRef<[u8]>, data: impl AsRef<[u8]>) -> Result<Self, Error> {
         let inner = |password: &[u8], data: &[u8]| -> Result<Self, Error> {
-            let length = data.len();
-            if length < 128 {
-                return Err(Error::InvalidLength(length));
-            }
+            let mut header = Header::parse(data)?;
 
-            let header: [u8; 96] = data[..96].try_into().unwrap();
-            if &header[..6] != b"scrypt" {
-                return Err(Error::InvalidMagicNumber);
-            }
-            let version = header[6];
-            if version != Version::V0.into() {
-                return Err(Error::UnknownVersion(version));
-            }
-            let log_n = header[7];
-            let r = u32::from_be_bytes(header[8..12].try_into().unwrap());
-            let p = u32::from_be_bytes(header[12..16].try_into().unwrap());
-            let params = Params::new(log_n, r, p).map_err(Error::from)?;
-            let salt: [u8; 32] = header[16..48].try_into().unwrap();
-
-            let process: [u8; 48] = header[..48].try_into().unwrap();
-            let checksum = format::compute_checksum(&process);
-            if checksum != header[48..64] {
-                return Err(Error::InvalidChecksum);
-            }
+            header.verify_checksum(&data[48..64])?;
 
             let mut dk: [u8; 64] = [u8::default(); 64];
-            scrypt::scrypt(password, &salt, &params, &mut dk).unwrap();
-
-            let process: [u8; 64] = header[..64].try_into().unwrap();
-            format::verify_signature(&dk[32..], &process, &header[64..96])?;
-
-            let header = Header::new(header);
+            scrypt::scrypt(password, &header.salt(), &header.params(), &mut dk).unwrap();
             let dk = DerivedKey::new(dk);
-            let (data, signature) = data[96..].split_at(length - 128);
+
+            header.verify_signature(&dk, &data[64..Header::size()])?;
+
+            let (data, signature) =
+                data[Header::size()..].split_at(data.len() - Header::size() - Signature::size());
             let data = data.to_vec();
-            let signature = signature.try_into().unwrap();
+            let signature = Signature::new(signature.try_into().unwrap());
             Ok(Self {
                 header,
                 dk,
@@ -104,12 +81,12 @@ impl Decryptor {
 
             let input = [decryptor.header.as_bytes().as_slice(), &decryptor.data].concat();
 
-            let dk = decryptor.dk.as_bytes();
-            let mut cipher = Aes256Ctr128BE::new(dk[..32].into(), &GenericArray::default());
+            let mut cipher =
+                Aes256Ctr128BE::new(&decryptor.dk.encrypt().into(), &GenericArray::default());
             let mut data = decryptor.data;
             cipher.apply_keystream(&mut data);
 
-            format::verify_signature(&dk[32..], &input, &decryptor.signature)?;
+            format::verify_signature(&decryptor.dk.mac(), &input, &decryptor.signature.as_bytes())?;
 
             buf.copy_from_slice(&data);
             Ok(())
