@@ -11,11 +11,9 @@ use aes::{
     Aes256,
 };
 use ctr::Ctr128BE;
-use rand::{Rng, SeedableRng};
-use rand_chacha::ChaCha20Rng;
 use scrypt::Params;
 
-use crate::format::{self, DerivedKey, Header, Version};
+use crate::format::{self, DerivedKey, Header, Signature};
 
 /// Encryptor for the scrypt encrypted data format.
 #[derive(Debug)]
@@ -31,43 +29,22 @@ impl Encryptor {
     /// This uses the recommended values for the scrypt parameters which is
     /// sufficient for most use-cases.
     pub fn new(password: impl AsRef<[u8]>, data: impl AsRef<[u8]>) -> Self {
-        Self::with_params(password, &Params::recommended(), data)
+        Self::with_params(password, Params::recommended(), data)
     }
 
     #[allow(clippy::missing_panics_doc)]
     /// Creates a new `Encryptor`.
-    pub fn with_params(
-        password: impl AsRef<[u8]>,
-        params: &Params,
-        data: impl AsRef<[u8]>,
-    ) -> Self {
-        let inner = |password: &[u8], params: &Params, data: &[u8]| -> Self {
-            fn generate_salt() -> [u8; 32] {
-                let mut rng = ChaCha20Rng::from_entropy();
-                rng.gen()
-            }
-
-            let salt = generate_salt();
+    pub fn with_params(password: impl AsRef<[u8]>, params: Params, data: impl AsRef<[u8]>) -> Self {
+        let inner = |password: &[u8], params: Params, data: &[u8]| -> Self {
+            let mut header = Header::new(params);
 
             let mut dk: [u8; 64] = [u8::default(); 64];
-            scrypt::scrypt(password, &salt, params, &mut dk).unwrap();
-
-            let mut header: [u8; 96] = [u8::default(); 96];
-            header[..6].copy_from_slice(b"scrypt");
-            header[6] = Version::V0.into();
-            header[7] = params.log_n();
-            header[8..12].copy_from_slice(&params.r().to_be_bytes());
-            header[12..16].copy_from_slice(&params.p().to_be_bytes());
-            header[16..48].copy_from_slice(&salt);
-
-            let processed: [u8; 48] = header[..48].try_into().unwrap();
-            header[48..64].copy_from_slice(&format::compute_checksum(&processed));
-
-            let processed: [u8; 64] = header[..64].try_into().unwrap();
-            header[64..].copy_from_slice(&format::compute_signature(&dk[32..], &processed));
-
-            let header = Header::new(header);
+            scrypt::scrypt(password, &header.salt(), &params, &mut dk).unwrap();
             let dk = DerivedKey::new(dk);
+
+            header.compute_checksum();
+            header.compute_signature(&dk);
+
             let data = data.to_vec();
             Self { header, dk, data }
         };
@@ -83,19 +60,18 @@ impl Encryptor {
         let inner = |encryptor: Self, buf: &mut [u8]| {
             type Aes256Ctr128BE = Ctr128BE<Aes256>;
 
-            let out_len = encryptor.out_len();
+            let bound = (Header::size(), encryptor.out_len() - Signature::size());
 
-            let dk = encryptor.dk.as_bytes();
-            let mut cipher = Aes256Ctr128BE::new(dk[..32].into(), &GenericArray::default());
+            let mut cipher =
+                Aes256Ctr128BE::new(&encryptor.dk.encrypt().into(), &GenericArray::default());
             let mut data = encryptor.data;
             cipher.apply_keystream(&mut data);
 
-            buf[..96].copy_from_slice(&encryptor.header.as_bytes());
-            buf[96..out_len - 32].copy_from_slice(&data);
+            buf[..bound.0].copy_from_slice(&encryptor.header.as_bytes());
+            buf[bound.0..bound.1].copy_from_slice(&data);
 
-            let processed = &buf[..out_len - 32];
-            let signature = format::compute_signature(&dk[32..], processed);
-            buf[out_len - 32..].copy_from_slice(&signature);
+            let signature = format::compute_signature(&encryptor.dk.mac(), &buf[..bound.1]);
+            buf[bound.1..].copy_from_slice(&signature);
         };
         inner(self, buf.as_mut());
     }
@@ -111,6 +87,6 @@ impl Encryptor {
     /// Returns the number of output bytes of the encrypted data.
     #[must_use]
     pub fn out_len(&self) -> usize {
-        self.data.len() + 128
+        Header::size() + self.data.len() + Signature::size()
     }
 }
